--- a/index.html
+++ b/index.html
@@ -1248,8 +1248,8 @@
                         <div class="contact-title mb-5 text-center">
                             <h1>聯絡我們</h1>
                         </div>
-                        <div class="row ">
-                          <div class="col-sm">
+                        <div class="row d-flex justify-content-center">
+                          <div class="col-6">
                             <div class="contact-us ">
                                                          <form>
                                 <div class="form-group">
