--- a/vue/vue.html
+++ b/vue/vue.html
@@ -14,18 +14,21 @@
         <section>
             <div class="container">
                 <div class="title">
-                <img class="logo" src="" alt="">
-                <h1></h1>
+                <!-- <img class="logo" v-bind:src='src' alt=""> -->
+                <img class="logo" :src='src' alt="">
+
+                <!-- <h1 v-text='title'></h1> -->
+                <h1>{{title}}</h1>
+
             </div>       
             </div>
         </section>
     </div>
 </body>
 
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js'></script>
+
 
   <script>
       let data = {
@@ -33,7 +36,16 @@
           title:'vue.js 手牽手一起嗑光全家桶'
       }
 
-      $('.title > h1').text(data.title);
-      $('.logo').attr('src',data.src);
+    //   $('.title > h1').text(data.title);
+    //   $('.logo').attr('src',data.src);
+
+    // 將資料和html牽在一起
+     let vm = new Vue({
+        el:'#app',
+        data : data,
+
+     }) 
+
+
   </script>
 </html>
